--- a/_themes/24hl/layouts/default.html
+++ b/_themes/24hl/layouts/default.html
@@ -13,9 +13,9 @@
 
     <!-- styles -->
     {{ if is_dev }}
-      <link rel="stylesheet" href="{{ theme:css src="kinder" }}" rel="styleheet">
+      <link rel="stylesheet" href="{{ theme:css src="24hl" }}" rel="styleheet">
     {{ else }}
-      <link rel="stylesheet" href="{{ theme:css src="kinder.min" }}">
+      <link rel="stylesheet" href="{{ theme:css src="24hl.min" }}">
     {{ endif }}
 
 
@@ -70,7 +70,46 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-2">
-            
+            <h4>Company</h4>
+            <ul class="list-unstyled">
+              <li><a href="/about">About</a></li>
+              <li><a href="/investors">Investors</a></li>
+              <li><a href="/sell-your-centre">Sell Your Centre</a></li>
+
+
+            </ul>
+          </div>
+          <div class="col-xs-12 col-sm-2">
+            <h4> <a href="/careers">Careers</a></h4>
+            <ul class="list-unstyled">
+              <li><a href="/careers#current-vacancies">Current Vacancies</a></li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-sm-2">
+            <h4>Support</h4>
+            <ul class="list-unstyled">
+              <li><a href="/contact-us">Contact Us</a></li>
+              <li><a href="/about/privacy">Privacy</a></li>
+            </ul>
+          </div>
+          <div class="col-xs-12 col-sm-4 col-sm-offset-2 footer-overview">
+            <div class="clearfix">
+              <div class="block-logo" style="float: right;">
+                <a href="{{ homepage }}">{{ _site_name|widont }}</a>
+              </div>
+            </div><br>
+            <p>
+              Think Childcare Limited <br>
+              Suite 3, 1 Park Avenue <br>
+              Drummoyne NSW 2047<br>
+
+              PO Box 465 Drummoyne NSW, 1470 <br>
+            </p>
+            <div class="think-lines"></div><br>
+            <div class="footer-subtext">
+            <p>
+              Copyright Think Childcare Limited 2015. Design by <a href="http://24hourlime.com.au">24HL</a>
+            </p></div>
           </div>
         </div>
       </div>
