--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -269,7 +269,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: 'Montserrat', "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Oxygen', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   font-weight: 400;
   line-height: 1.42857143;
@@ -2609,7 +2609,7 @@ img {
 .nav-main > li > a {
   display: block;
   padding: 10px 15px 15px;
-  color: #373736;
+  color: #fff;
   border-bottom-left-radius: 5px;
   border-bottom-right-radius: 5px;
 }
@@ -2639,6 +2639,10 @@ h2 {
 }
 h4 {
   font-weight: bolder;
+}
+h5 {
+  font-weight: 100;
+  color: #fff;
 }
 .nav-parent {
   font-weight: bold;
@@ -2680,11 +2684,11 @@ h4 {
   border: 0;
 }
 .home-hero {
-  position: relative;
-  height: 860px;
-  background: url('/_themes/24hl/img/') no-repeat center center #ffffff;
-  background-size: auto 100%;
-  margin-bottom: 30px;
+  background: url('/_themes/24hl/img/orange_polygon.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 .home-hero .container {
   position: relative;
@@ -2692,11 +2696,13 @@ h4 {
 .home-hero .container .home-hero-punchline {
   position: relative;
   display: inline;
+  color: #fff;
+  font-weight: 100;
   margin: 0;
-  font-size: 46px;
+  font-size: 30px;
   top: 135px;
   left: 90px;
-  letter-spacing: -3px;
+  letter-spacing: 5px;
   line-height: 46px;
 }
 @media (max-width: 767px) {
@@ -2707,27 +2713,6 @@ h4 {
     line-height: 30px;
     font-size: 30px;
   }
-}
-.home-hero-secondary {
-  background: #f3efde;
-}
-.home-hero-secondary .container {
-  height: 400px;
-  position: relative;
-}
-.home-hero-overview {
-  position: absolute;
-  right: 0px;
-  bottom: 0px;
-  width: 33%;
-}
-.home-blocks {
-  margin-top: 20px;
-  /* margin-bottom:20px; */
-  background: #f3efde;
-}
-.home-blocks .row {
-  margin-bottom: 30px;
 }
 .row-fifths > div {
   width: 20%;
