--- a/_themes/24hl/layouts/journal.html
+++ b/_themes/24hl/layouts/journal.html
@@ -21,7 +21,7 @@
 
     <!-- favicon -->
     <link rel="shortcut icon" type="image/png" href="{{ theme:img src="favicon.png" }}">
-    <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Oxygen:300,400,700' rel='stylesheet' type='text/css'>
   </head>
   <body id="top" class="page-{{segment_1}}">
     <header class="header">
