--- a/_themes/24hl/src/less/bootstrap/variables.less
+++ b/_themes/24hl/src/less/bootstrap/variables.less
@@ -42,7 +42,7 @@
 //== Typography
 //
 //## Font, line-height, and color for body text, headings, and more.
-@font-family-sans-serif:  'Montserrat', "Helvetica Neue", Helvetica, Arial, sans-serif;
+@font-family-sans-serif:  'Oxygen', "Helvetica Neue", Helvetica, Arial, sans-serif;
 @font-family-serif:       Georgia, "Times New Roman", Times, serif;
 //** Default monospace fonts for `<code>`, `<kbd>`, and `<pre>`.
 @font-family-monospace:   Menlo, Monaco, Consolas, "Courier New", monospace;
