--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -190,15 +190,15 @@ h5 {
 
   .home-hero-punchline{
     position:relative;
-    display:inline;
+
     color: #fff;
     font-weight: 100;
 
     margin:0;
-    font-size:30px;
+    font-size:15px;
 
-    top:135px;
-    left:90px;
+    top:352px;
+    left:500px;
 
 
     letter-spacing: 5px;
@@ -309,16 +309,15 @@ h5 {
 }
 
 .block {
-  padding:@padding-base-horizontal;
-  background:#D21E17;
+  padding:10px 50px 50px;
+  width: 100%;
+  background:#3d3c3c;
   margin-bottom: 20px;
-  //min-height:300px;
-
+  opacity: 0.3;
   color:@white;
-
-  border-radius:7px;
-
   font-size:16px;
+  position: relative;
+  top: 35%;
 
   p {
     margin:0;
@@ -371,6 +370,7 @@ h5 {
   border-top-right-radius: 10px;
 
 }
+
 .list-staff-content {
   padding: 0 10px;
 }
