--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -1,7 +1,10 @@
 <div class="home-hero">
 	<div class="container">
-		<div class="home-hero-punchline">24HOUR LIME. DIGITAL DESIGN.</div>
-	</div>
+		<h1 class="home-hero-punchline">24HOUR LIME. DIGITAL DESIGN.</h1>
+</div>
+<div class="block">
+	<p>Work</p>
+
 </div>
 		{{ entries:listing folder="blog" limit="3" }}
 			{{ if no_results }}
