--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -3,7 +3,16 @@
 		<h1 class="home-hero-punchline">24HOUR LIME. DIGITAL DESIGN.</h1>
 </div>
 <div class="block">
-	<p>Work</p>
+
+<ul class="flex-container">
+  <li class="block-item">01</li>
+  <li class="block-item">02</li>
+  <li class="block-item">03</li>
+  <li class="block-item">04</li>
+
+</ul>
+
+
 
 </div>
 		{{ entries:listing folder="blog" limit="3" }}
