--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2610,8 +2610,6 @@ img {
   display: block;
   padding: 10px 15px 15px;
   color: #fff;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
 }
 .nav-main > li > a:hover {
   text-decoration: none;
@@ -2701,7 +2699,7 @@ h5 {
   font-size: 15px;
   top: 352px;
   left: 500px;
-  letter-spacing: 5px;
+  letter-spacing: 4px;
   line-height: 46px;
 }
 @media (max-width: 767px) {
@@ -2712,6 +2710,15 @@ h5 {
     line-height: 30px;
     font-size: 30px;
   }
+}
+.home-number {
+  color: #fff;
+  font-weight: 700;
+  margin: 0;
+  font-size: 25px;
+}
+.verticalline {
+  border-left: thick solid #fff;
 }
 .row-fifths > div {
   width: 20%;
@@ -2779,18 +2786,34 @@ h5 {
   text-align: center;
   letter-spacing: -3px;
 }
-.block {
-  padding: 10px 50px 50px;
-  width: 100%;
-  background: #3d3c3c;
-  margin-bottom: 20px;
-  opacity: 0.3;
-  color: #ffffff;
-  font-size: 16px;
-  position: relative;
-  top: 35%;
+.block-item {
+  display: flex;
+  padding: 10px 50px 10px;
+  width: 250px;
+  height: 90px;
+  line-height: 14px;
+  color: white;
+  font-weight: bold;
+  letter-spacing: 3px;
+  font-size: 1.5em;
+  text-align: left;
 }
-.block p {
+.flex-container {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  background: #3d3c3c;
+  opacity: 0.3;
+  margin-top: 335px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  justify-content: flex-start;
+}
+.flex-container p {
   margin: 0;
 }
 .list-staff-name {
