--- a/_themes/24hl/layouts/default.html
+++ b/_themes/24hl/layouts/default.html
@@ -26,7 +26,7 @@
   <body id="top" class="page-{{segment_1}}">
 
 
-          
+
 
         <nav class="block-navigation">
           <ul class="nav nav-main" role="navigation">
@@ -50,9 +50,15 @@
     <footer class="footer" role="contentinfo">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-2">
-
+          <div class="col-xs-12 col-sm-4">
+            <a href="mailto:info@24hourlime.com.au">e: info@24hourlime.com.au</a>
           </div>
+
+          <div class="col-xs-12 col-sm-2">
+            <a href="http://24hourlime.com.au">www: 24hourlime.com.au</a>
+          </div>
+
+
         </div>
       </div>
     </footer>
