home page stuff

--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -227,7 +227,18 @@ h5 {
 }
 
 .verticalline {
-  border-left: thick solid #fff;
+  border-left: thin solid;
+  color: @white;
+  opacity: 1;
+}
+
+.boldnumbers {
+  color: #fff;
+  font-weight: 700;
+  opacity: 1;
+
+  margin:0;
+  font-size:15px;
 }
 
 .row-fifths > div {
@@ -332,6 +343,7 @@ h5 {
   letter-spacing: 3px;
   font-size: 1.5em;
   text-align: left;
+
 }
 
 
@@ -340,7 +352,7 @@ h5 {
   padding: 0;
   margin: 0;
   list-style: none;
-  background:#3d3c3c;
+  background: #282523;
   opacity: 0.3;
   margin-top: 335px;
 
