--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -3,16 +3,29 @@
 		<h1 class="home-hero-punchline">24HOUR LIME. DIGITAL DESIGN.</h1>
 </div>
 <div class="block">
-
 <ul class="flex-container">
-  <li class="block-item">01</li>
-  <li class="block-item">02</li>
-  <li class="block-item">03</li>
-  <li class="block-item">04</li>
+  <li class="block-item">
+		<div class="verticalline"></div>
+			<div class="boldnumbers">01<br>WORK
+		</div>
+	</li>
+	<li class="block-item">
+		<div class="verticalline"></div>
+			<div class="boldnumbers">02<br>ABOUT
+		</div>
+	</li>
+	<li class="block-item">
+		<div class="verticalline"></div>
+			<div class="boldnumbers">03<br>JOURNAL
+		</div>
+	</li>
+	<li class="block-item">
+		<div class="verticalline"></div>
+			<div class="boldnumbers">01<br>CONTACT
+		</div>
+	</li>
 
 </ul>
-
-
 
 </div>
 		{{ entries:listing folder="blog" limit="3" }}
