--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2718,7 +2718,16 @@ h5 {
   font-size: 25px;
 }
 .verticalline {
-  border-left: thick solid #fff;
+  border-left: thin solid;
+  color: #ffffff;
+  opacity: 1;
+}
+.boldnumbers {
+  color: #fff;
+  font-weight: 700;
+  opacity: 1;
+  margin: 0;
+  font-size: 15px;
 }
 .row-fifths > div {
   width: 20%;
@@ -2802,7 +2811,7 @@ h5 {
   padding: 0;
   margin: 0;
   list-style: none;
-  background: #3d3c3c;
+  background: #282523;
   opacity: 0.3;
   margin-top: 335px;
   display: -webkit-box;
