--- a/_themes/24hl/layouts/default.html
+++ b/_themes/24hl/layouts/default.html
@@ -50,14 +50,21 @@
     <footer class="footer" role="contentinfo">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 col-sm-4">
-            <a href="mailto:info@24hourlime.com.au">e: info@24hourlime.com.au</a>
+          <div class="col-xs-12 col-sm-3">
+            e: <a href="mailto:info@24hourlime.com.au">info@24hourlime.com.au</a>
           </div>
 
-          <div class="col-xs-12 col-sm-2">
-            <a href="http://24hourlime.com.au">www: 24hourlime.com.au</a>
+          <div class="col-xs-12 col-sm-3">
+            www: <a href="http://24hourlime.com.au">24hourlime.com.au</a>
           </div>
 
+          <div class="col-xs-12 col-sm-3">
+            Let's work together
+          </div>
+          <div class="footer-overview">
+            <div class="col-xs-12 col-sm-3">
+              © 24HL 2015
+            </div>
 
         </div>
       </div>
