--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -23,7 +23,7 @@
 @color-yellow: #FCBF15;
 @color-yellow-secondary: #FDD973;
 
-@color-orange: #FA6022;
+@color-orange: #f67e4e;
 
 
 @imagePath: '/_themes/24hl/img';
@@ -250,11 +250,11 @@ h5 {
 }
 
 .footer {
-  padding-top:20px;
-  padding-bottom:20px;
-  background:#373736;
+  padding-top:5px;
+  padding-bottom:5px;
+  background:#000;
 
-  color:@white;
+  color:@color-orange;
 
 
   a {
@@ -262,17 +262,6 @@ h5 {
   }
 
 
-  h4 {
-    margin:0;
-    font-size:20px;
-    padding-bottom: 15px;
-  }
-
-  ul {
-    list-style:none;
-    margin:0;
-    padding:0;
-  }
 
   @media (max-width: @screen-xs-max) {
     text-align: center;
@@ -352,8 +341,8 @@ h5 {
   padding: 0;
   margin: 0;
   list-style: none;
-  background: #282523;
-  opacity: 0.3;
+  background: rgba(40, 37, 35, .3);
+
   margin-top: 335px;
 
   display: -webkit-box;
