vertical line adjustment

--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -227,8 +227,8 @@ h5 {
 }
 
 .verticalline {
-  border-left: thin solid;
-  color: @white;
+  border-left: 1px solid;
+  color: #c7c7c7;
   opacity: 1;
 }
 
@@ -329,7 +329,7 @@ h5 {
   line-height: 14px;
   color: white;
   font-weight: bold;
-  letter-spacing: 3px;
+  letter-spacing: 4px;
   font-size: 1.5em;
   text-align: left;
 
