--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2718,8 +2718,8 @@ h5 {
   font-size: 25px;
 }
 .verticalline {
-  border-left: thin solid;
-  color: #ffffff;
+  border-left: 1px solid;
+  color: #c7c7c7;
   opacity: 1;
 }
 .boldnumbers {
@@ -2793,7 +2793,7 @@ h5 {
   line-height: 14px;
   color: white;
   font-weight: bold;
-  letter-spacing: 3px;
+  letter-spacing: 4px;
   font-size: 1.5em;
   text-align: left;
 }
