--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -228,8 +228,9 @@ h5 {
 
 .verticalline {
   border-left: 1px solid;
-  color: #c7c7c7;
-  opacity: 1;
+  height: 796px;
+  color: @white;
+  opacity: .3;
 }
 
 .boldnumbers {
@@ -250,28 +251,17 @@ h5 {
 }
 
 .footer {
+  text-align: left;
   padding-top:5px;
   padding-bottom:5px;
   background:#000;
-
+  font-size: 10px;
   color:@color-orange;
 
 
   a {
     color:@white;
   }
-
-
-
-  @media (max-width: @screen-xs-max) {
-    text-align: center;
-
-    h4 {
-      margin-top:5px;
-    }
-
-  }
-
 }
 
 
