--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -216,6 +216,16 @@ h5 {
 }
 }
 
+.page-header {
+  position:relative;
+  color: @color-orange;
+  font-weight: 400;
+  margin:0;
+  font-size:18px;
+  letter-spacing: 4px;
+
+}
+
 .home-number {
     color: #fff;
     font-weight: 700;
@@ -251,16 +261,14 @@ h5 {
 }
 
 .footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
+
   text-align: left;
   padding-top:5px;
   padding-bottom:5px;
   background:#000;
   font-size: 10px;
   color:@color-orange;
+  
 
 
   a {
@@ -355,8 +363,41 @@ h5 {
 
 }
 
+.flex-4-column {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-flex-direction: row;
+  justify-content: flex-start;
 
 
+  p {
+    margin:0;
+  }
+
+}
+
+.column-item {
+  display: flex;
+  padding:20px 10px 20px;
+  width: 250px;
+  height: 90px;
+
+
+  line-height: 12px;
+  color: #000;
+  font-weight: 100;
+  font-size: 12px;
+  text-align: left;
+
+}
 
 .list-staff {}
 .list-staff-member {}
