--- a/_themes/24hl/templates/default.html
+++ b/_themes/24hl/templates/default.html
@@ -51,9 +51,13 @@
 		{{ /entries:pagination }}
 
 	</div>
-	<h2 class="page-header">24HOUR LIME. DIGITAL DESIGN.</h2>
-	
-	<div class="block">
+
+
+<ul class="flex-page-header">
+	<li class="column-page-header">
+		<h2 class="page-header">24HOUR LIME. DIGITAL DESIGN.</h2>
+	</li>
+</ul>
 	<ul class="flex-4-column">
 	  <li class="column-item">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget augue maximus, ultrices tellus nec, sollicitudin quam. Suspendisse sed justo odio. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum congue varius neque. Donec elementum est vitae odio sodales, ac convallis elit semper. Proin posuere hendrerit lectus id bibendum. Morbi condimentum sem at eros volutpat, nec mollis eros laoreet. Aliquam aliquam nulla vel consequat egestas.
@@ -85,4 +89,4 @@ Vivamus pulvinar semper tempus. Phasellus tincidunt sit amet elit nec finibus. M
 		</li>
 
 	</ul>
-</div>
+<div class="page-seperator"></div>
