--- a/_themes/24hl/css/24hl.css
+++ b/_themes/24hl/css/24hl.css
@@ -2711,6 +2711,26 @@ h5 {
     font-size: 30px;
   }
 }
+.contact-background {
+  background: url('/_themes/24hl/img/black_polygon.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 900px;
+}
+.contact-background .container {
+  position: relative;
+}
+.contact-background .container .contact-background-punchline {
+  position: relative;
+  color: #f67e4e;
+  font-weight: 700;
+  margin: 0;
+  font-size: 50px;
+  letter-spacing: 0px;
+  line-height: 50px;
+}
 .page-header {
   position: relative;
   color: #f67e4e;
@@ -2825,12 +2845,39 @@ h5 {
 .flex-4-column p {
   margin: 0;
 }
+.flex-2-column {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  flex-flow: row nowrap;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-direction: row;
+  justify-content: space-around;
+}
+.flex-2-column p {
+  visibility: hidden;
+  margin: 0;
+}
 .column-item {
   display: flex;
   padding: 20px 10px 20px;
   width: 250px;
   line-height: 12px;
   color: #000;
+  font-weight: 100;
+  font-size: 12px;
+  text-align: left;
+}
+.column-item-dark {
+  display: flex;
+  padding: 20px 10px 20px;
+  width: 250px;
+  line-height: 12px;
+  color: #ffffff;
   font-weight: 100;
   font-size: 12px;
   text-align: left;
