--- a/_themes/24hl/src/less/24hl.less
+++ b/_themes/24hl/src/less/24hl.less
@@ -216,6 +216,30 @@ h5 {
 }
 }
 
+.contact-background {
+  background:url('@{imagePath}/black_polygon.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 900px;
+
+  .container {
+   position: relative;
+
+
+  .contact-background-punchline{
+    position:relative;
+    color: @color-orange;
+    font-weight: 700;
+    margin:0;
+    font-size:50px;
+    letter-spacing: 0px;
+    line-height: 50px;
+
+  }
+}
+}
 .page-header {
   position:relative;
   color: @color-orange;
@@ -374,12 +398,48 @@ h5 {
 
 }
 
+.flex-2-column {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  flex-flow: row nowrap;
+
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+
+  -webkit-flex-direction: row;
+  justify-content: space-around;
+
+
+  p {
+    visibility: hidden;
+    margin:0;
+  }
+
+}
+
 .column-item {
   display: flex;
   padding:20px 10px 20px;
   width: 250px;
   line-height: 12px;
   color: #000;
+  font-weight: 100;
+  font-size: 12px;
+  text-align: left;
+
+}
+
+.column-item-dark {
+  display: flex;
+  padding:20px 10px 20px;
+  width: 250px;
+  line-height: 12px;
+  color: @white;
   font-weight: 100;
   font-size: 12px;
   text-align: left;
